# dimedrop

./: .env.template  README.md  app.pid  app.py  app_backup.py  comprehensive_screenshot.py  dimedrop-gradio.html  screenshot_app.py  simple_screenshot.py  simple_screenshot_v2.py  test_app.py  theme.py
.github/: copilot-instructions.md
Backend/: pyproject.toml  run.sh
Backend/backend/: main.py
Backend/backend/app/api/: ebay.py  upload_card.py
Backend/backend/app/core/: alerts_tracker.py  database.py  ebay_auth.py  forecast_model.py  models.py  notification_service.py  portfolio_tracker.py  price_tracker.py  sentiment_analyzer.py  vision_processor.py
Backend/backend/app/models/models/: forecast_model.pkl  scaler.pkl
Backend/backend/app/services/: auth.py
Backend/backend/app/utils/: load_env.py
Backend/backend/config/config/: .env.example
Backend/backend/tests/: test_auth.py  test_data_isolation.py  test_upload_card.py
components/: __init__.py  api.py  auth.py  home.py  portfolio_management.py  price_tracking.py  scan_card.py  sentiment_analysis.py  ui.py
tests/: test_app.py
